# stock-strategy-backtester

./: AGENTS.md  CLAUDE.md  init.sh  pyproject.toml  run.py
app/: main.py
app/config/: settings.py
app/models/: company.py  stock.py  trade_calendar.py
app/repositories/: clickhouse.py  mongodb.py
app/routes/: kline_router.py  stock_router.py  strategy_router.py  update_router.py
app/services/: stock_company_service.py  stock_service.py  strategies.py  trade_calendar_service.py
app/services/data_sources/: akshare_provider.py  tushare_provider.py
app/utils/: log.py
static/: index.html
