[project]
name = "stock-finder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.54",
    "clickhouse-driver>=0.2.10",
    "fastapi>=0.135.3",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "tushare>=1.4.29",
    "uvicorn>=0.44.0",
]
[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true
